Cleanup/remove old UI (#10)
* feat: integrate reviews & ratings into listings search

# Conflicts:
#	app/src/main/java/com/quickserve/app/config/SecurityConfig.java
#	app/src/main/java/com/quickserve/app/model/ServiceListing.java
#	app/src/main/java/com/quickserve/app/repository/ReviewRepository.java
#	app/src/main/java/com/quickserve/app/repository/ServiceListingRepository.java
#	app/src/main/java/com/quickserve/app/service/BookingService.java
#	app/src/main/java/com/quickserve/app/service/impl/BookingServiceImpl.java
#	app/src/main/java/com/quickserve/app/service/impl/ReviewServiceImpl.java
#	app/src/main/java/com/quickserve/app/utils/JwtAuthFilter.java
#	app/src/main/resources/application.properties

* Backend : Admin API's, booking and review services

* refractor: booking, listing admin services and controllers

* feat(ui): admin, provider, and customer dashboard

* Cloudinary Integeration in the project

* chore: update gitignore for team setup